<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="app_upper_TXT">Tic Tac Toe</string>
    <string name="bottom_TXT">Result</string>
    <string name="winner">Congratulations, Winner is</string>
    <string name="des_P1">P1</string>
    <string name="des_P2">P2</string>
    <string name="des_P3">P3</string>
    <string name="des_P4">P4</string>
    <string name="des_P5">P5</string>
    <string name="des_P6">P6</string>
    <string name="des_P7">P7</string>
    <string name="des_P8">P8</string>
    <string name="des_P9">P9</string>
    <string name="play_again">Play Again</string>
    <string name="reset_game">Reset Game</string>
</resources>